# Autodynamics

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: COUPLING_DIAGNOSTICS.md  COUPLING_VALIDATION.md  ENVELOPE_DIAGNOSTICS.md  ENVELOPE_VALIDATION.md  TRAJECTORY_DIAGNOSTICS.md  TURBULENCE_RANKING.md
docs/benchmarks/: coupling_v0.3.0a0.csv  coupling_v0.3.0a0.log.txt  cross_release_v0.2.0a0.csv  cross_release_v0.2.0a0.log.txt  envelope_v0.4.0a0.csv  envelope_v0.4.0a0.log.txt  turbulence_ranking_v0.2.1a0.csv  turbulence_ranking_v0.2.1a0.log.txt
examples/: coupling_validation.py  cross_release_trajectories.py  envelope_validation.py  trajectory_demo.py  turbulence_ranking.py
src/autodynamics/: __init__.py  demo.py  trajectory.py
src/autodynamics/adapters/: __init__.py  batch.py  csv_trajectory.py
src/autodynamics/coupling/: __init__.py  granger.py  graph.py  metrics.py
src/autodynamics/envelope/: __init__.py  containment.py  region.py
tests/: test_adapters.py  test_algebra.py  test_coupling.py  test_coupling_smoke.py  test_diagnostics.py  test_envelope.py  test_envelope_smoke.py  test_smoke.py  test_trajectory.py
tests/fixtures/: README.md  autonometrics_v0_8_sample.csv
