[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodynamics"
version = "0.2.0a0"
description = "Modelling autonomy dynamics over the Autonometrics atlas. Ships a ProfileTrajectory recording substrate, a small algebra of trajectories (velocities, accelerations, drift, volatility, rolling statistics, summary), and generic CSV/batch adapters. Layer 2 of the Autonometrics -> Autodynamics -> Ex-Machina trilogy."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "bugerchip" }]
keywords = [
    "autonomy",
    "dynamics",
    "complex-systems",
    "self-determination",
    "autonometrics",
    "trajectories",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
dependencies = [
    "autonometrics>=0.9.0a0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/bugerchip/Autodynamics"
Repository = "https://github.com/bugerchip/Autodynamics"
Issues = "https://github.com/bugerchip/Autodynamics/issues"

[project.scripts]
autodynamics-demo = "autodynamics.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autodynamics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
